--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
 body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     height: 100%;
     background: linear-gradient(180deg, #ce6c16d3, #c63b0ccd);
 }
